[package]
edition = "2021"
name = "spyn"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = {version = "4.5.2", features = ["derive"]}
fxhash = "0.2.1"
hex = "0.4.3"
sha1 = "0.10.6"
sha3 = "0.10.8"
tempdir = "0.3.7"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["fmt", "env-filter"]}
