[package]
description = "A tool for creating on-demand Python virtual environments"
edition = "2021"
homepage = "https://github.com/vmalloc/spyn"
license = "MIT"
name = "spyn"
repository = "https://github.com/vmalloc/spyn"
version = "0.2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = {version = "4.5.2", features = ["derive"]}
hex = "0.4.3"
sha3 = "0.10.8"
tempdir = "0.3.7"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["fmt", "env-filter"]}

[dev-dependencies]
literally = "0.1.3"
