[package]
description = "A tool for creating on-demand Python virtual environments"
edition = "2021"
homepage = "https://github.com/vmalloc/spyn"
license = "MIT"
name = "spyn"
repository = "https://github.com/vmalloc/spyn"
version = "0.5.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = {version = "4.5.2", features = ["derive"]}
ctrlc = "3.4.4"
hex = "0.4.3"
homedir = "0.2.1"
itertools = "0.12.1"
sha3 = "0.10.8"
smol_str = "0.2.1"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["fmt", "env-filter"]}
which = "6"

[dev-dependencies]
literally = "0.1.3"
